// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton /> has defaults 1`] = `
<body>
  <div>
    <svg
      aria-disabled="false"
      class="button"
      height="4"
      role="button"
      tabindex="0"
      width="3"
    >
      <title>
        Test label
      </title>
      <use
        xlink:href="#test-id"
      />
    </svg>
  </div>
</body>
`;

exports[`<IconButton /> has defaults 2`] = `
<svg
  aria-disabled="false"
  class="button"
  height="4"
  role="button"
  tabindex="0"
  width="3"
>
  <title>
    Test label
  </title>
  <use
    xlink:href="#test-id"
  />
</svg>
`;
